--- a/calculator_5/calculator_5.csproj
+++ b/calculator_5/calculator_5.csproj
@@ -44,20 +44,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Division.cs" />
+    <Compile Include="OneArgument\Cosinus.cs" />
+    <Compile Include="TwoArgument\Division.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="ITwoArgumentCalculator.cs" />
-    <Compile Include="Multiplication.cs" />
-    <Compile Include="Plus.cs" />
+    <Compile Include="OneArgument\IOneArgumentCalculator.cs" />
+    <Compile Include="TwoArgument\ITwoArgumentCalculator.cs" />
+    <Compile Include="TwoArgument\Multiplication.cs" />
+    <Compile Include="OneArgument\OneArgumentFactory.cs" />
+    <Compile Include="TwoArgument\Plus.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Substraction.cs" />
-    <Compile Include="TwoArgumentFactory.cs" />
+    <Compile Include="OneArgument\Sinus.cs" />
+    <Compile Include="OneArgument\Sqrt.cs" />
+    <Compile Include="TwoArgument\Substraction.cs" />
+    <Compile Include="TwoArgument\TwoArgumentFactory.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
