--- a/calculator_5/calculator_5.csproj
+++ b/calculator_5/calculator_5.csproj
@@ -44,10 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OneArgument\Abs.cs" />
+    <Compile Include="OneArgument\Arccos.cs" />
+    <Compile Include="OneArgument\Arcsin.cs" />
     <Compile Include="OneArgument\Cosinus.cs" />
     <Compile Include="OneArgument\Exponent.cs" />
     <Compile Include="OneArgument\Inversion.cs" />
+    <Compile Include="OneArgument\Ln.cs" />
     <Compile Include="OneArgument\Logarifm.cs" />
+    <Compile Include="OneArgument\Percent.cs" />
     <Compile Include="OneArgument\Sqr.cs" />
     <Compile Include="OneArgument\Tangens.cs" />
     <Compile Include="TwoArgument\Division.cs" />
@@ -67,6 +72,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OneArgument\Sinus.cs" />
     <Compile Include="OneArgument\Sqrt.cs" />
+    <Compile Include="TwoArgument\Pow.cs" />
     <Compile Include="TwoArgument\Substraction.cs" />
     <Compile Include="TwoArgument\TwoArgumentFactory.cs" />
     <EmbeddedResource Include="Form1.resx">
